---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: ????
  Changes:
    - Use LuaForce::beacon_distribution_modifier
  Bugfixes:
    - Fixed edge case when beacon supply area exactly touches the receiver's bounding box
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-06-26
  Changes:
    - Improved filters for asteroid-collector: read all filters, ignore if controlled by circuit
  Bugfixes:
    - Fixed crash when entity is in range of both hidden and normal beacons
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-06-21
  Bugfixes:
    - Fixed waste of performance when looking for beacons
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-06-20
  Features:
    - Calculate pollution rates
  Changes:
    - Improved accuracy of beacon effects
    - Improved fuel detection for burner energy sources: no fuel for non-standard filters, uses currently_burning and whole inventory if not ambiguous
    - Improved fluid energy sources: various combinations of burns_fluid / scale_fluid_usage / fluid_usage_per_tick
  Bugfixes:
    - Fixed crash with offshore-pump entities that have a filtered fluidbox
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-06-13
  Changes:
    - Improved agricultural towers
    - Improved asteroid collectors
    - New API for GUI integration
    - Improved number formatting
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-06-09
  Features:
    - Get configuration of LuaEntity
    - Supports ghosts of all kinds (marked for deconstruction, marked for upgrade, module removal & insertion plans)